# fufan-course-desktop

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: desktop-build.yml
backend/knowledge/: manifest.json
backend/knowledge/pages/: 01-ai-coding-api-entry.md  02-model-api-playbook.md  03-rag-concepts.md  04-rag-project-playbook.md  05-rag-evaluation.md  06-agentic-graphrag.md  07-document-audit-agent.md  08-claude-code-openclaw.md  09-agent-skills-and-mcp.md  10-learning-with-agent.md  11-deployment-ops.md  12-capstone-products.md  13-course-faq.md
backend/runtime-packs/context-engineering/: course.yaml  migrate.md  quick-run.md  skill-manifest.json
backend/runtime-packs/context-engineering/.cursor/rules/: context-compression.mdc
backend/runtime-packs/context-engineering/examples/mini-agent/: README.md
backend/server/: app.js  chat.js  importer.js  index.js  llm.js  markdown.js  pty_bridge.py  search.js  settings-store.js  skill-packs.js  terminal-runtime.js  wiki-store.js
backend/tests/: api.test.js  chat.test.js  desktop-package.test.js  importer.test.js  markdown.test.js  release-smoke.test.js  search.test.js  skill-packs.test.js  tauri-runner.test.js  terminal-runtime.test.js  terminal-screen.test.js
docs/: desktop-migration-status.md  windows-build.md
frontend/: app.js  index.html  styles.css  terminal-input.js  terminal-screen.js  terminal-transcript.js
scripts/: build-runtime.mjs  desktop-package.mjs  release-smoke.mjs  tauri-runner.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  pty_bridge.rs
(+1 files in other folders)
